[package]
name = "async-mlock-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"

[dependencies.nix]
version = "0.29.0"
default-features = false
features = ["mman", "feature"]

[dependencies.tokio]
version = "1.39.3"
default-features = false
optional = true
features = []

[dev-dependencies]
tempfile = "3.12.0"

[dev-dependencies.tokio]
version = "1.39.3"
features = ["full"]

[dev-dependencies.criterion]
version = "0.5.1"
features = ["async_tokio"]

[[bench]]
name = "tokio_impl"
required-features = ["tokio"]
harness = false

[[test]]
name = "tokio_impl"
required-features = ["tokio"]

[profile.profiling]
inherits = "release"
debug = "full"
